--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,19 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
+    <string name="state_fragment_onCreate">"Etat actuel du fragment : onCreateView"</string>
+    <string name="state_fragment_onResume">"Etat actuel du fragment : onResume"</string>
+    <string name="state_fragment_onStart">"Etat actuel du fragment : onStart"</string>
+    <string name="message_text_fragment">"TextView clicked."</string>
+    <string name="fragment_onCreate">"Fragment onCreate"</string>
+    <string name="fragment_onPause">"Fragment onPause"</string>
+    <string name="fragment_onAttach">"Fragment onAttach"</string>
+    <string name="fragment_onDestroy">"Fragment onDestroy"</string>
+    <string name="fragment_onDetach">"Fragment onDetach"</string>
+    <string name="fragment_onResume">"Fragment onResume"</string>
+    <string name="fragment_onStart">"Fragment onStart"</string>
+    <string name="fragment_onStop">"Fragment onStop"</string>
+    <string name="string_tag2">"activity_fragment"</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
